# simple_shapes

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: simple_shape.rviz
launch/: simple_shapes.launch
nodes/: simple_shapes  simple_shapes_drawer
param/: simple_shapes.yaml
report/: report.md
src/simple_shapes/: aux_function.py  simple_shapes.py
