#############################################################################
## Set minimum required version of cmake, project name and compile options ##
#############################################################################

cmake_minimum_required(VERSION 3.0.2)
project(simple_shapes)

###########################################################################
## Find catkin packages and libraries for catkin and system dependencies ##
###########################################################################
find_package(catkin REQUIRED COMPONENTS
  geometry_msgs
  rospy
)

##########################################
## Setup for python modules and scripts ##
##########################################
catkin_python_setup()


################################################
## Declare ROS messages, services and actions ##
################################################
# No new message declared.

################################################
## Declare ROS dynamic reconfigure parameters ##
################################################
# No new parameters declared.


###################################
## catkin specific configuration ##
###################################

catkin_package(
 CATKIN_DEPENDS geometry_msgs rospy
)

###########
## Build ##
###########

## Specify additional locations of header files
## Your package locations should be listed before other locations
include_directories(
include
  ${catkin_INCLUDE_DIRS}
)


#############
## Install ##
#############

# all install targets should use catkin DESTINATION variables
# See http://ros.org/doc/api/catkin/html/adv_user_guide/variables.html

catkin_install_python(PROGRAMS
  nodes/simple_shapes
  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
)

install(DIRECTORY launch
	DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
)
