<?xml version="1.0"?>
<package format="2">
  <name>simple_shapes</name>
  <version>0.1.0</version>
  <description>The simple_shapes package to make the robot draw regular polygons</description>

  <maintainer email="mingi.jeong.gr@dartmouth.edu">Mingi Jeong</maintainer>


  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
